--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@ strong {
   text-decoration: none;
   font-weight: 700;
   color: white;
-  font-size: 1.3rem;
+  font-size: 1rem;
   border: solid white 1px;
   padding: 0.5rem 2rem;
   text-transform: uppercase;
@@ -16,6 +16,11 @@ strong {
 .boton:hover {
   color: #333333;
   background-color: white;
+}
+
+.btn-naranja {
+  border-color: #ffb71c;
+  color: #ffb71c;
 }
 
 nav #logo {
@@ -200,5 +205,25 @@ footer .copy a {
   padding-right: 2rem;
   font-size: 1.2rem;
   line-height: 2.3rem;
+}
+
+#trabajos {
+  margin-top: 2rem;
+  margin-bottom: 7rem;
+}
+
+#trabajos .card-text {
+  margin-top: 0;
+  line-height: 1.5rem;
+}
+
+#trabajos .card-img-top {
+  height: 12rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#trabajos .trabajos {
+  grid-gap: 26px 0px;
 }
 /*# sourceMappingURL=style.css.map */
